--- a/BudgetClientTest/src/app/home/home.component.html
+++ b/BudgetClientTest/src/app/home/home.component.html
@@ -1,7 +1,8 @@
 <div>
   <div class="card-body">
     <div class="container-fluid">
-      <div class="text-center">
+      <div class="text-center"
+           *ngIf="isLoggedIn">
         <h3 class="homeText">{{message}}</h3>
       </div>
       <div class="text-center">
