--- a/BudgetClientTest/src/app/menu/menu.component.html
+++ b/BudgetClientTest/src/app/menu/menu.component.html
@@ -1,7 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand"
-       routerLink="/">Home</a>
+    <a class="navbar-brand">Budget Planner</a>
     <button class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
@@ -11,27 +10,42 @@
             aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse"
          id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active"
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active">Stuff</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active">Stuff</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active">Stuff</a>
+        </li>
+      </ul>
+
+      <ul class="nav justify-content-end">
+        <li class="nav-item"
             *ngIf="!isLoggedIn">
-          <a class="nav-link"
+          <a class="nav-link active"
              routerLink="/login"
              routerLinkActive="active">Login</a>
         </li>
         <li class="nav-item"
             *ngIf="isLoggedIn">
           <a class="nav-link"
-             (click)="logout()">Logout</a>
+             (click)="logout()"
+             style="cursor: pointer">Logout</a>
         </li>
         <li class="nav-item"
             *ngIf="!isLoggedIn">
           <a class="nav-link active"
              routerLink="/register"
-             rotuerLinkActive="active">Register</a>
+             routerLinkActive="active">Register</a>
         </li>
       </ul>
     </div>
+
   </div>
 </nav>
